# encurtador_link

backend/: .env  app.py  config.py  models.py  pyproject.toml
frontend/: .env.local  index.html  verificadorPag.html
frontend/url/: index.html
